# pytest-iterassert

./: .gitignore  README.md  example.py  lint  pyproject.toml  tests.py
.github/workflows/: ci.yaml  release.yaml
src/iterassert/: __init__.py
